<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:checked="true"
            android:icon="@android:drawable/sym_action_email"
            android:title="@string/nav_home" />
        <item
            android:id="@+id/nav_goals"
            android:icon="@android:drawable/ic_menu_send"
            android:title="@string/nav_goals" />
        <item
            android:id="@+id/nav_statistics"
            android:icon="@android:drawable/ic_menu_delete"
            android:title="@string/nav_statistics" />
        <item
            android:id="@+id/nav_activity_type"
            android:icon="@android:drawable/ic_menu_delete"
            android:title="@string/activity_type" />
    </group>
</menu>
