<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".activity.ActivityActivityNewEdit">



    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/activity_type"
        android:textSize="24sp"
        android:textFontWeight="700"/>

    <TextView
        android:id="@+id/edit_activity_type"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:textFontWeight="700"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start_date"
        android:textSize="24sp"
        android:textFontWeight="800"/>

    <TextView
        android:id="@+id/edit_start_date"
        android:inputType="date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:textFontWeight="700" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/end_date"
        android:textSize="24sp"
        android:textFontWeight="800"/>

    <TextView
        android:id="@+id/edit_end_date"
        android:inputType="date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="@string/lorem"
        android:textSize="18sp"
        android:textFontWeight="700"/>


    <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_view_location"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:listitem="@layout/fragment_location_item" />


</LinearLayout>