<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.MainActivity">

    <Button
        android:id="@+id/btnStartActivity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start_activity"
        android:textSize="24sp"
        android:background="@color/colorPrimary"
        android:padding="10dp"
        android:layout_centerInParent="true"
        android:textColor="#fff"
        app:layout_constraintHorizontal_bias="0.497"  />

    <ImageView
        android:id="@+id/weatherButton"
        android:layout_width="336dp"
        android:layout_height="120dp"
        android:layout_marginTop="116dp"
        android:layout_marginEnd="156dp"
        android:contentDescription="@string/weather_description"
        android:scaleType="fitCenter"
        android:src="@drawable/weericon"
        android:text="@string/het_weer"
        android:layout_centerHorizontal="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</RelativeLayout>