<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".activity.ActivityGoalNewEdit">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/activity_type"
        android:textSize="24sp"/>

    <TextView
        android:id="@+id/edit_activity_type"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18sp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/time_goal"
        android:layout_marginTop="10dp"/>

    <EditText
        android:id="@+id/edit_time_goal"
        android:inputType="text"
        android:autofillHints="@string/time_goal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/speed_goal"
        android:layout_marginTop="10dp"/>

    <EditText
        android:id="@+id/edit_speed_goal"
        android:inputType="text"
        android:autofillHints="@string/speed_goal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>