<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">


    <TextView
        android:id="@+id/textTemp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginLeft="150dp"
        android:layout_marginTop="180dp"
        android:text="test"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="90sp" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="220dp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_alignParentStart="false"
        android:layout_alignParentLeft="false"
        >

        <ImageView
            android:id="@+id/imageWeather"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/weather_description"
            android:src="@drawable/dunno"

            />
    </FrameLayout>

    <TextView
        android:id="@+id/textLocation"
        android:layout_width="316dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="90dp"
        android:text="@string/default_location"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/textAdvice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="100dp"
        android:layout_marginTop="30dp"
        android:text="@string/advice_for_activity"
        android:textAlignment="center"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="20sp"
        android:textStyle="italic" />


</LinearLayout>